force-app/main/default/objects/Sales_Engineering_Tasks__c/Sales_Engineering_Tasks__c.object-meta.xml
<CustomObject>
    <label>Sales Engineering Task</label>
    <nameField>
        <label>Sales Engineering Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Engineering Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>