force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Account_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account/ Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Engineering_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>