force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Back_up_kit__c.field-meta.xml
<CustomField>
    <fullName>Back_up_kit__c</fullName>
    <label>Back-up kit $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>