force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Back_up_kit_kW__c.field-meta.xml
<CustomField>
    <fullName>Back_up_kit_kW__c</fullName>
    <formula>Back_up_kit__c / Total_Project_kWs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Back-up kit $/kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>