force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Business_days_in_SE_workflow__c.field-meta.xml
<CustomField>
    <fullName>Business_days_in_SE_workflow__c</fullName>
    <description>This field displays the number of days between the Completion Date and Request Date</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(Completion_Date__c)),
        NOT(ISBLANK(Request_Date__c))
    ),
    ( 
        /* Total days */
        (FLOOR((Completion_Date__c - Request_Date__c) / 7) * 5) +
        
        /* Remaining days */
        (MIN(5, 
            MAX(0,
                MOD( Completion_Date__c - Request_Date__c, 7) -
                CASE( 
                    MOD(DATE(1985,6,24) - Request_Date__c, 7),
                    0, 0,
                    1, 0,
                    2, 0,
                    3, 0,
                    4, 0,
                    5, 1,
                    6, 2,
                    0
                )
            )
        ))
    ),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business days in SE workflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>