force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Business_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Complete__c</fullName>
    <description>https://mainspringenergy.atlassian.net/browse/EDS-3902</description>
    <formula>ABS(
  5 * (FLOOR((Restart_Date__c - DATE(1985,6,24))/7) - FLOOR((Completion_Date__c - DATE(1985,6,24))/7))
  + MIN(5, MOD(Restart_Date__c - DATE(1985,6,24), 7) + 1)
  - MIN(5, MOD(Completion_Date__c - DATE(1985,6,24), 7) + 1)
) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>