force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTM - Direct</fullName>
            </value>
            <value>
                <fullName>BTM - Indirect</fullName>
            </value>
            <value>
                <fullName>FTM - Bi-lateral</fullName>
            </value>
            <value>
                <fullName>FTM - RFP</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>