force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1: &lt; 1 MW, Single Interconnect, Grid Parallel</fullName>
            </value>
            <value>
                <fullName>C2: &lt; 1 MW, Multiple Interconnects, Grid Forming</fullName>
            </value>
            <value>
                <fullName>C3: &gt; 1 MW, Multiple Interconnects, Grid Forming, New Fuel</fullName>
            </value>
            <value>
                <fullName>C4: &apos;Out of norm&apos;/ special project, first time technical, new fuel, challenge for product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>