force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Copy_opp_satge__c.field-meta.xml
<CustomField>
    <fullName>Copy_opp_satge__c</fullName>
    <formula>CASE(Opportunity__r.StageName, 
&apos;Initial Assessment&apos;, &apos;Initial customer support&apos;,
&apos;Indicative Proposal&apos;, &apos;Indicative proposal&apos;,
&apos;Firm Proposal&apos;,&apos;Firm proposal&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copy opp satge</label>
    <type>Text</type>
</CustomField>