force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>