force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Customer_paying_for_site_visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_paying_for_site_visit__c</fullName>
    <label>Customer paying for site visit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (no exec conversation)</fullName>
            </value>
            <value>
                <fullName>Waived (exec conversation occurred)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>