force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/EngRequestStage__c.field-meta.xml
<CustomField>
    <fullName>EngRequestStage__c</fullName>
    <label>Eng Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial customer support</fullName>
            </value>
            <value>
                <fullName>Indicative proposal</fullName>
            </value>
            <value>
                <fullName>Preliminary proposal</fullName>
            </value>
            <value>
                <fullName>Firm proposal</fullName>
            </value>
            <value>
                <fullName>Contract support</fullName>
            </value>
            <value>
                <fullName>Execution support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>