force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/EPC_Estimate__c.field-meta.xml
<CustomField>
    <fullName>EPC_Estimate__c</fullName>
    <label>EPC Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>