force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/EPC_Support__c.field-meta.xml
<CustomField>
    <fullName>EPC_Support__c</fullName>
    <label>EPC Support $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>