force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/EPC_Support_kW__c.field-meta.xml
<CustomField>
    <fullName>EPC_Support_kW__c</fullName>
    <formula>EPC_Support__c  /  Total_Project_kWs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPC Support $/kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>