force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/FTM_BTM__c.field-meta.xml
<CustomField>
    <fullName>FTM_BTM__c</fullName>
    <label>FTM/ BTM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTM</fullName>
            </value>
            <value>
                <fullName>FTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>