force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Intermittent_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Intermittent_Stop_Date__c</fullName>
    <description>https://mainspringenergy.atlassian.net/browse/EDS-3902</description>
    <label>Intermittent Stop Date</label>
    <type>Date</type>
</CustomField>