force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>