force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Lead_PD_Rep__c.field-meta.xml
<CustomField>
    <fullName>Lead_PD_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead PD Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Engineering_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>