force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/LGen_Power_kW__c.field-meta.xml
<CustomField>
    <fullName>LGen_Power_kW__c</fullName>
    <label>LGen Power (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>