force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/My_Assigned_Sales_Eng_Task__c.field-meta.xml
<CustomField>
    <fullName>My_Assigned_Sales_Eng_Task__c</fullName>
    <formula>Lead_PD_Rep__r.Alias = $User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Assigned Sales Eng Task</label>
    <type>Checkbox</type>
</CustomField>