force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/My_Engineering_Request__c.field-meta.xml
<CustomField>
    <fullName>My_Engineering_Request__c</fullName>
    <formula>Account_Sales_Rep__r.Alias  = $User.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Engineering Request</label>
    <type>Checkbox</type>
</CustomField>