force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Number_of_Days_taken__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_taken__c</fullName>
    <formula>CASE(MOD(  Request_Date__c  - DATE(1985,6,24),7),
 

0 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
 

1 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
 

2 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
 

3 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
 

4 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
 

5 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
 

6 , CASE( MOD( Completion_Date__c  - Request_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
 

999)
 

+
 

(FLOOR(( Completion_Date__c  - Request_Date__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>