force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Number_of_LGens__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LGens__c</fullName>
    <label>Number of LGens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>