force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>