force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Site_Visit_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Contract_Signed__c</fullName>
    <label>Site Visit Contract Signed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>