force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Sites__c.field-meta.xml
<CustomField>
    <fullName>Sites__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Sales Engineering Tasks</relationshipLabel>
    <relationshipName>Sales_Engineering_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>