force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress: development</fullName>
            </value>
            <value>
                <fullName>In progress: peer review</fullName>
            </value>
            <value>
                <fullName>In progress: final review</fullName>
            </value>
            <value>
                <fullName>In progress: support</fullName>
            </value>
            <value>
                <fullName>On deck (waiting info)</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Submitted to sales/customer</fullName>
            </value>
            <value>
                <fullName>Cancelled/ customer withdrew</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>