force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/submitted_EPC_Estimate__c.field-meta.xml
<CustomField>
    <fullName>submitted_EPC_Estimate__c</fullName>
    <label>submitted EPC Estimate ($/kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>