force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Drawing Package</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Project Scoping</fullName>
            </value>
            <value>
                <fullName>Site Walk</fullName>
            </value>
            <value>
                <fullName>RFI/RFP</fullName>
            </value>
            <value>
                <fullName>Technical Evaluation</fullName>
            </value>
            <value>
                <fullName>Permit/ Interconnection</fullName>
            </value>
            <value>
                <fullName>Regulatory Evaluation</fullName>
            </value>
            <value>
                <fullName>Firm Proposal Package</fullName>
            </value>
            <value>
                <fullName>Prelim Proposal Package</fullName>
            </value>
            <value>
                <fullName>Vendor Services Package</fullName>
            </value>
            <value>
                <fullName>Handover Package</fullName>
            </value>
            <value>
                <fullName>Single-Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>