force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Total_Project_kWs__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_kWs__c</fullName>
    <label>Total Project kWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>