force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Utility_allowance__c.field-meta.xml
<CustomField>
    <fullName>Utility_allowance__c</fullName>
    <label>Utility allowance $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>