force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Utility_allowance_kW__c.field-meta.xml
<CustomField>
    <fullName>Utility_allowance_kW__c</fullName>
    <formula>Utility_allowance__c  /  Total_Project_kWs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility allowance $/kW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>