force-app/main/default/objects/Sales_Engineering_Tasks__c/fields/Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Date__c</fullName>
    <description>https://mainspringenergy.atlassian.net/browse/EDS-3902</description>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>