force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/All_Sales_Engineering_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Sales_Engineering_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Job_Name__c</columns>
    <columns>Task__c</columns>
    <columns>Sites__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Lead_PD_Rep__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Submitted to sales/customer,Cancelled/ customer withdrew,Completed</value>
    </filters>
    <label>Active Sales Engineering Tasks</label>
</ListView>