force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/All_Sales_Engineering_Tasks1.listView-meta.xml
<ListView>
    <fullName>All_Sales_Engineering_Tasks1</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Lead_PD_Rep__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>Nature_of_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Engineering Tasks</label>
</ListView>