force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/Canceled_Tasks.listView-meta.xml
<ListView>
    <fullName>Canceled_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Account_Sales_Rep__c</columns>
    <columns>Sites__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Task__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled/ customer withdrew</value>
    </filters>
    <label>Canceled Tasks</label>
</ListView>