force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/My_Assigned_Sales_Eng_Task.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Sales_Eng_Task</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Assigned_Sales_Eng_Task__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Assigned Sales Eng Tasks</label>
</ListView>