force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/My_Sales_Eng_Requests.listView-meta.xml
<ListView>
    <fullName>My_Sales_Eng_Requests</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Engineering_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Sales Eng Requests</label>
</ListView>