force-app/main/default/objects/Sales_Engineering_Tasks__c/listViews/Tasks_Completed.listView-meta.xml
<ListView>
    <fullName>Tasks_Completed</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Account_Sales_Rep__c</columns>
    <columns>Sites__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Task__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to sales/customer</value>
    </filters>
    <label>Tasks Completed</label>
</ListView>